Modifica di una variabile js

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+    <h1>Password non troppo sicura</h1>
+
     <div id="password"></div>
     
     <script type="text/javascript" src="./assets/js/main.js"></script>
